Site/public/assets/base.css
/* ... */
.circ-sym {
  display: inline-grid;
  place-content: center;

  width: auto;
  height: 1.2em;
  line-height: 1em;

  aspect-ratio: 1;
  border: solid 1px currentColor;
  border-radius: 50%;

  font-size: 0.84em;


  &.nfo::after {
    font-style: italic;
    content: 'i';
  }

  &.qst::after {
    content: '?';
  }

  &.exc::after {
    content: '!';
  }
}

.ckrd-marg {
  --marg-size: 0.67ch;
  &.ckrd-left  input:is([type="checkbox"], [type="radio"]) { margin-left: var(--marg-size) }
  &.ckrd-right input:is([type="checkbox"], [type="radio"]) { margin-right: var(--marg-size) }
  &.ckrd-both  input:is([type="checkbox"], [type="radio"]) { margin-left: var(--marg-size); margin-right: var(--marg-size) }
}

